syntax = "proto3";

package graplinc.grapl.api.db_schema_manager.v1beta1;

import "graplinc/common/v1beta1/types.proto";
import "graplinc/grapl/common/v1beta1/types.proto";

message DeployGraphSchemasRequest {
    graplinc.common.v1beta1.Uuid tenant_id = 1;
}

message DeployGraphSchemasResponse {}

service DbSchemaManagerService {
  rpc DeployGraphSchemas(DeployGraphSchemasRequest) returns (DeployGraphSchemasResponse);
}
